--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello!</title>
+    <title>Hello there!</title>
   </head>
   <body>
-    
+    <p>hi</p>
   </body>
 </html>
