Всё перелопатил, сделал как у сраколова

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Hello there!</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" >
   </head>
   <body>
-    <p>hi</p>
-    <p>hello</p>
+    <header>
+        Hello, header!
+    </header>
+    <content>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut mattis posuere nisi, sed gravida quam congue quis. Sed bibendum scelerisque dui. Vestibulum orci lacus, porta a auctor sagittis, gravida in ligula. Aliquam erat volutpat. Suspendisse congue et lacus sed mattis. Aenean lorem odio, ultrices ut arcu efficitur, luctus placerat neque. Curabitur in feugiat tortor. Integer luctus bibendum felis, eu hendrerit nisl ultricies vitae. Etiam facilisis, leo vel consequat pretium, velit orci bibendum neque, ut laoreet tellus ex non eros. Vestibulum nec sem imperdiet, semper nibh convallis, facilisis tortor. Nunc fringilla mauris at dui aliquet, eu porta metus sagittis. Suspendisse ut mattis eros. Praesent nec ipsum id sem dictum egestas id et elit. Sed a feugiat dolor. Mauris ullamcorper, nisl ac placerat pretium, arcu nunc semper tortor, et commodo elit nisl vel libero. Phasellus ac imperdiet libero. Sed interdum sed nulla sit amet maximus. Nullam dignissim nisl vitae elit consequat tincidunt. Curabitur eu ligula finibus, gravida purus eu, auctor massa. Vestibulum ante ipsum primis in faucibu</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut mattis posuere nisi, sed gravida quam congue quis. Sed bibendum scelerisque dui. Vestibulum orci lacus, porta a auctor sagittis, gravida in ligula. Aliquam erat volutpat. Suspendisse congue et lacus sed mattis. Aenean lorem odio, ultrices ut arcu efficitur, luctus placerat neque. Curabitur in feugiat tortor. Integer luctus bibendum felis, eu hendrerit nisl ultricies vitae. Etiam facilisis, leo vel consequat pretium, velit orci bibendum neque, ut laoreet tellus ex non eros. Vestibulum nec sem imperdiet, semper nibh convallis, facilisis tortor.</p>
+    </content>
+    <footer>  
+        Hello, footer!
+    </footer>
   </body>
 </html>
