--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" >
   </head>
   <body>
+    <script src="/js/script.js"></script>
     <header>
         Hello, header!
     </header>
