Добавил генерацию таблицы
todo:
Проверка на то, что таблица уже сгенерирована
Отцентрировать таблицу по середине страницы
Естестна написать алгоритм построения лабиринта
Желательно убрать расстояние между ячейками

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title>Hello there!</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" >
+    <script src="/js/script.js"></script>
   </head>
   <body>
     <h2>Алгоритм А*</h2>
     <p>Введите размер матрицы</p>
-    <input type="text" name="size">
-    <button id="sizebutton">Подтвердить</button>
+    <input type="text" id="size">
+    <button class="action-button" id="confirm" onclick="generate()">Подтвердить</button>
   </body>
 </html>
