Почти закончил построение лабиринта
Выдаёт ошибки на строках 108/117/122
Потому что выходит за пределы матрицы, следовательно айди не существует, отсюда и ошибка
Возможно фиксится переносом второй части условия в отдельный  if, на который переходится при прохождении первого if'a
Небольшие улучшения кода:
Добавил проверку на созданность таблицы
Убрал символы в ячейках
Добавил кастомные атрибуты для x и у, чтобы можно было брать их по отдельности

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Введите размер матрицы</p>
     <input type="text" id="size">
     <button class="action-button" id="confirm" onclick="generate()">Подтвердить</button>
+    <button class="action-button" id="reset" onclick="window.location.reload()">Сбросить</button>
+    <button class="action-button" id="generatemaze" onclick="generatemaze()">Генерировать лабиринт</button>
   </body>
 </html>
