--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <input type="text" id="size">
     <button class="action-button" id="confirm" onclick="generate()">Подтвердить</button>
     <button class="action-button" id="reset" onclick="window.location.reload()">Сбросить</button>
-    <button class="action-button" id="generatemaze" onclick="generatemaze()">Генерировать лабиринт</button>
-    <button class="action-button" id="selectstart" onclick="selectstart()">Выбрать начало</button>
-    <button class="action-button" id="selectfinish" onclick="selectfinish()">Выбрать конец</button>
+    <button class="action-button" id="generatemaze" onclick="generateMaze()">Генерировать лабиринт</button>
+    <button class="action-button" id="selectstart" onclick="selectStart()">Выбрать начало</button>
+    <button class="action-button" id="selectfinish" onclick="selectFinish()">Выбрать конец</button>
+    <button class="action-button" id="findpath" onclick="findPath()">A*</button>
   </body>
 </html>
